--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,6 @@
 CTparental									usr/bin
 CTparental-bl-infos							usr/bin
+CTlistusers									usr/bin
 debian/CTparental.conf						etc/CTparental
 debian/dist.conf							etc/CTparental
 locale/fr/LC_MESSAGES/ctparental.mo		usr/share/locale/fr/LC_MESSAGES/
