modifié :         locale/es/LC_MESSAGES/ctparental.mo 	modifié :         locale/es/LC_MESSAGES/ctparental.po 	modifié :         locale/fr/LC_MESSAGES/ctparental.mo 	modifié :         locale/fr/LC_MESSAGES/ctparental.po

--- a/locale/es/LC_MESSAGES/ctparental.po
+++ b/locale/es/LC_MESSAGES/ctparental.po
@@ -168,7 +168,7 @@ msgstr "Uso"
 msgid ""
 "\t    => Install parental control on the computer (desktop PC). Can be used with\n"
 "\t      an additional parameter to specify a source path for the redirection page.\n"
-"\t      example: CTparental -dirhtml -i /home/toto/html/\n"
+"\t      example: CTparental -i -dirhtml /home/toto/html/\n"
 "\t      if no option a default page is used."
 msgstr ""
 "\t    => Instale en control parental en el PC (PC de escritorio). Puede utilizarse con\n"
@@ -237,7 +237,7 @@ msgid ""
 "\t      we prefer to install them by hand, or for the postinst and prerm script of deb.\n"
 "\t      examples:\n"
 "\t              CTparental -i -nodep\n"
-"\t              CTparental -dirhtml -i /home/toto/html/ -nodep\n"
+"\t              CTparental -i -dirhtml /home/toto/html/ -nodep\n"
 "\t              CTparental -u -nodep"
 msgstr ""
 "\t    => si se coloca después de -i ou -u no permite instalar/desinstalar las dependencias, utilidades si\n"
