--- a/locale/fr/LC_MESSAGES/ctparental.po
+++ b/locale/fr/LC_MESSAGES/ctparental.po
@@ -168,7 +168,7 @@ msgstr "Usage"
 msgid ""
 "\t    => Install parental control on the computer (desktop PC). Can be used with\n"
 "\t      an additional parameter to specify a source path for the redirection page.\n"
-"\t      example: CTparental -dirhtml -i /home/toto/html/\n"
+"\t      example: CTparental -i -dirhtml /home/toto/html/\n"
 "\t      if no option a default page is used."
 msgstr ""
 "\t    => Installe le contrôle parental sur l'ordinateur (PC de bureau). Peut être utilisé avec\n"
@@ -237,7 +237,7 @@ msgid ""
 "\t      we prefer to install them by hand, or for the postinst and prerm script of deb.\n"
 "\t      examples:\n"
 "\t              CTparental -i -nodep\n"
-"\t              CTparental -dirhtml -i /home/toto/html/ -nodep\n"
+"\t              CTparental -i -dirhtml /home/toto/html/ -nodep\n"
 "\t              CTparental -u -nodep"
 msgstr ""
 "\t    =>     si placé aprés -i ou -u permet de ne pas installer/désinstaller les dépendances, utiles si\n"
@@ -272,8 +272,8 @@ msgstr "tous les utilisateurs du système subissent le filtrage !"
 msgid "\t    => Update the config file ,"
 msgstr "\t    => Met à jour le fichier de configuration,"
 
-msgid "\t=> Add / Delete users in the ctoff group based on the config file, $FILE_GCTOFFCONF"
-msgstr "\t=> Ajoute/Supprime les utilisateurs dans le groupe ctoff en fonction du fichier de configuration, $FILE_GCTOFFCONF"
+msgid "   => Add / Delete users in the ctoff group based on the config file, $FILE_GCTOFFCONF"
+msgstr "   => Ajoute/Supprime les utilisateurs dans le groupe ctoff en fonction du fichier de configuration, $FILE_GCTOFFCONF"
 
 msgid "\t    => Enable rules of custom firewall."
 msgstr "\t    => Active les règles de pare-feu personnalisées."
